# XDown

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  Run-Test.ps1  run_tests.py  smartroute.config.json
.claude/: settings.local.json
.claude/commands/: code.md  fix-github-issue.md  qt-project.md  test-auto.md  test-code.md  test-fix.md  test-loop.md
.pipeline/: CLAUDE.md.template  model_caller.py  nodes.py  setup.py  test_loop.py
.pipeline/context/: project_context.md  runtime_logs.md  task_context.md
.smartroute/: Execution_Plan.json  task.md
docs/: XDown (v1.0 MVP) 单元测试用例.md  XDown (v1.0 MVP) 系统测试用例-自动化.md  XDown (v1.0 MVP) 系统测试用例.md  XDown (v1.0 MVP) 软件概要设计说明书.md  XDown (v1.0 MVP) 软件详细设计说明书.md  XDown-v1.0-CodeReview.md  XDown_SystemTestCases_1.0.md  XDown_UnitTestCases_1.0.md
docs/design/: xdown-detailed-design-v1.0.md  xdown-detailed-design-v2.0.md  xdown-overview-design-v1.0.md  xdown-overview-design-v2.0.md
docs/requirements/: xdown-srs-v1.0.md  xdown-srs-v2.0.md  xdown-v2.0需求点.md
docs/review/: xdown-review-report-3_4_2.md
docs/test/: TEST-ISSUES.md  system-test-cases.md  xdown-automation-plan-v1.0.md  xdown-automation-plan-v2.0.md  xdown-system-test-cases-v2.0.md
resources/: qml.qrc
resources/qml/: AddTaskDialog.qml  Main.qml  NavItem.qml  TaskCard.qml  TaskDelegate.qml
src/: main.cpp
src/common/: DownloadTask.h
src/core/: DBManager.cpp  DBManager.h  DownloadEngine.cpp  DownloadEngine.h  HttpDownloader.cpp  HttpDownloader.h  SettingsManager.cpp  SettingsManager.h
src/core/download/: AdaptiveThreadController.cpp  AdaptiveThreadController.h  BTDownloadEngine.cpp  BTDownloadEngine.h  ChunkDownloader.cpp  ChunkDownloader.h  ChunkInfo.h  HTTPDownloadEngine.cpp  HTTPDownloadEngine.h  IDownloadEngine.cpp  IDownloadEngine.h
src/core/task/: TaskManager.cpp  TaskManager.h  TaskState.h
src/gui/: TaskListModel.cpp  TaskListModel.h
tests/: CMakeLists.txt  Run-SystemTest.ps1  mock_http_server.py  tst_downloadtask.cpp  tst_httptest.cpp  tst_simple.cpp  tst_systemtest.cpp
tests/automation/: mock_server.py  run_automation_tests.py
tests/src/: mock_http_server.py  test_basic.cpp  test_pipeline_unit.cpp  tst_adaptivethread.cpp  tst_btdownloadengine.cpp  tst_chunkinfo.cpp  tst_downloadtask.cpp  tst_httptest.cpp  tst_qml.cpp  tst_systemtest.cpp  tst_taskstate.cpp
tests/system/: smoke_test.cpp  test_pipeline.cpp  test_pipeline_basic.cpp  test_pipeline_system.cpp
tests/test_qt/: CMakeLists.txt  test_qt.cpp
